static_library("gamelogger") {
  configs += [ ":gamelogger_config" ]
  precompiled_header = "logging_base.h"
  precompiled_source = "pch.cc"
  sources = [
    "check.h",
    "check.cc",
    "console.h",
    "console.cc",
    "file_util.h",
    "file_util.cc",
    "logging.h",
    "logging.cc",
    "logging_base.h",
  ]
}

config("gamelogger_config") {
  include_dirs = [
    "./",
  ]
}


